# tok-lang

./: .gitignore  Cargo.toml  LICENSE  README.md  TECH_DEBT.md  tok-examples.md  tok-grammar.ebnf  tok-spec.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
crates/tok-codegen/: Cargo.toml
crates/tok-codegen/src/: compiler.rs  lib.rs
crates/tok-driver/: Cargo.toml
crates/tok-hir/: Cargo.toml
crates/tok-lexer/: Cargo.toml
crates/tok-parser/: Cargo.toml
crates/tok-runtime/: Cargo.toml
crates/tok-types/: Cargo.toml
editors/vscode-tok/: README.md  language-configuration.json  (+1 more)
examples/: README.md  concurrency.tok  csv_data.tok  file_processor.tok  http_api.tok  language_tour.tok  llm_demo.tok  math_and_algorithms.tok  template_demo.tok  toon_data.tok  word_counter.tok
tests/: _string_utils.tok  _uses_math.tok  any_test.tok  arrays_compile.tok  arrays_lambdas_test.tok  basics_compile.tok  basics_test.tok  builtins_new_test.tok  concurrency_test.tok  control_flow_test.tok  coverage_test.tok  debug_any2.tok  debug_any3.tok  debug_func.tok  debug_func2.tok  debug_func3.tok  debug_func4.tok  debug_func5.tok  debug_map.tok  debug_untyped.tok  default_params_test.tok  errors_tuples_test.tok  functions_test.tok  head_tail_test.tok  hello.tok  imports_test.tok  maps_compile.tok  maps_test.tok  math_helpers.tok  prototype_test.tok  simple_func.tok  spread_args_test.tok  stdlib_csv_test.tok  stdlib_destructure_test.tok  stdlib_fs_test.tok  stdlib_http_test.tok  stdlib_io_test.tok  stdlib_json_test.tok  stdlib_llm_test.tok  stdlib_math_test.tok  (+9 more)
(+103 files in other folders)
