[package]
name = "tok-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
tok-hir = { workspace = true }
tok-types = { workspace = true }
tok-runtime = { workspace = true }
cranelift-codegen = "0.113"
cranelift-frontend = "0.113"
cranelift-module = "0.113"
cranelift-object = "0.113"
target-lexicon = "0.12"
